FIX se arreglo el endpoint al que se llamaba para saber el correo

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,12 @@ obj/
 /NotificationMS/.vs/NotificationMS/FileContentIndex/335dfaf1-ec22-4d3c-87e8-e1f8f28609a9.vsidx
 /NotificationMS/.vs/NotificationMS/FileContentIndex/3eab6fab-66bb-4f47-a025-e25e61f8f8dd.vsidx
 
+/NotificationMS/.vs/NotificationMS/FileContentIndex/01698aca-2412-405f-a919-b22a225acfd5.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/55b472e0-ee09-4c39-83c7-c45e6a8365e5.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/61fb3738-b462-47f0-9950-690f416d50c7.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/e2d6f33d-b3b3-4958-bd44-5a3fd49f721d.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/f4780789-c369-4920-889a-634ee6fa9c02.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/28528997-b9b9-4995-a504-57b65255c738.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/a54f7db6-173c-491a-a0f6-ffaae1bce39f.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/ef515be7-3d4e-4600-95b8-f3b988534413.vsidx
+/NotificationMS/.vs/NotificationMS/FileContentIndex/f92b3c12-541c-4bba-930e-8b45c9a37f2e.vsidx
